# pyeo

./: .gitignore  Makefile  README.md  pyproject.toml  renovate.json  setup.cfg
.github/workflows/: pr-check.yml  release.yml
pyeo/: __init__.py  __main__.py  checker.py  exceptions.py  fk_plugin.py  main.py  visitor_protocol.py
pyeo/_features/: feature.py  method_has_protocol.py  object_has_protocol.py  protocol_method_code_free.py
pyeo/features/: code_free_ctor_visitor.py  feature.py  final_object.py  forbidden_decorator_visitor.py  method_has_protocol.py  no_code_in_ctors.py  no_er_names.py  no_er_suffix.py  no_getter_methods.py  no_mutable_objects.py  no_property_decorator.py  no_property_methods.py  no_public_attributes.py  no_reflection.py  no_setters.py  no_staticmethods.py  object_has_protocol.py  protocol_method_code_free.py
pyeo/features/mypy_features/: method_has_protocol.py  object_has_protocol.py
pyeo/utils/: __init__.py  class_is_protocol.py  decorator_name.py
tests/: conftest.py  test_check_er_names.yml  test_check_property_methods.yml  test_check_protocol_alias.yml  test_check_protocols.yml  test_code_free_ctor.py  test_decorator.py  test_generic_protocol.yml  test_method_has_protocol.yml  test_no_code_in_ctor.yml  test_no_reflection.yml  test_no_setters.yml  test_not_final_class.yml  test_protocol_methods_code_free.yml  test_staticmethods.yml
tests/features/: test_code_free_ctor.py  test_forbidden_decorator_visitor.py  test_no_er_suffix.py  test_no_getter_methods.py  test_no_mutable_objects.py  test_no_property_decorator.py  test_no_public_attributes.py
tests/libcst_features/it/: test_final.py
tests/libcst_features/unit/: test_final.py
